syntax = "proto3";

option java_multiple_files = true;

package es.codeurjc.WindService.proto;

message WindRequest{
    string name = 1;
}

message WindResponse{
    double wind = 2;
}

service WindService {
    rpc getWindSpeed(WindRequest) returns (WindResponse);
}